--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-router": "^1.81.10",
     "@tanstack/start": "^1.81.10",
+    "babel-plugin-react-compiler": "19.0.0-beta-a7bf2bd-20241110",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.459.0",
     "react": "^18.3.1",
+    "react-compiler-runtime": "19.0.0-beta-a7bf2bd-20241110",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "vinxi": "0.4.3"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "prettier": "3.3.3",
-    "typescript": "^5.6.2"
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.2",
+    "vite-tsconfig-paths": "^5.1.2"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
