--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@lucide/lab": "^0.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-router": "^1.81.10",
+    "@tanstack/router-devtools": "^1.81.10",
     "@tanstack/start": "^1.81.10",
     "babel-plugin-react-compiler": "19.0.0-beta-a7bf2bd-20241110",
     "class-variance-authority": "^0.7.0",
