--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tanstack/react-query": "^5.60.5",
+    "@tanstack/react-query-devtools": "^5.60.5",
     "@tanstack/react-router": "^1.81.10",
+    "@tanstack/react-router-with-query": "^1.81.14",
     "@tanstack/router-devtools": "^1.81.10",
     "@tanstack/start": "^1.81.10",
     "babel-plugin-react-compiler": "19.0.0-beta-a7bf2bd-20241110",
