--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vinxi dev",
     "build": "vinxi build",
     "start": "vinxi start",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@lucide/lab": "^0.1.2",
@@ -34,14 +35,19 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "9.14.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.5.4",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "autoprefixer": "^10.4.20",
+    "eslint": "9.14.0",
     "postcss": "^8.4.49",
     "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.14.0",
     "vite-tsconfig-paths": "^5.1.2"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
