--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@clerk/localizations": "^3.6.4",
+    "@clerk/tanstack-start": "^0.4.28",
     "@lucide/lab": "^0.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
