--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@clerk/localizations": "^3.6.4",
-    "@clerk/tanstack-start": "^0.4.28",
+    "@clerk/tanstack-start": "^0.5.0",
     "@lucide/lab": "^0.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -28,7 +28,7 @@
     "babel-plugin-react-compiler": "19.0.0-beta-a7bf2bd-20241110",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.459.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-compiler-runtime": "19.0.0-beta-a7bf2bd-20241110",
     "react-dom": "^18.3.1",
@@ -38,19 +38,20 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "9.14.0",
+    "@eslint/js": "9.15.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.5.4",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "autoprefixer": "^10.4.20",
-    "eslint": "9.14.0",
+    "eslint": "9.15.0",
+    "eslint-plugin-react-compiler": "19.0.0-beta-0dec889-20241115",
     "postcss": "^8.4.49",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.14.0",
+    "typescript-eslint": "^8.15.0",
     "vite-tsconfig-paths": "^5.1.2"
   },
   "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
